Fix broken style for add event button on screen sm

--- a/app/assets/stylesheets/v2/founders/dashboard.scss
+++ b/app/assets/stylesheets/v2/founders/dashboard.scss
@@ -21,6 +21,7 @@
 
 .founder-dashboard-togglebar__toggle {
   position: relative;
+  display: inline-block;
 }
 
 .founder-dashboard-togglebar__toggle-group {
@@ -35,9 +36,9 @@
   width: 120px;
 
   @include media-breakpoint-down(xs) {
-    width: 80px;
+    width: 75px;
     font-size: 0.75rem;
-    padding: 0.75rem 0.5rem;
+    padding: 1rem 0.5rem;
   }
 
   &:hover {
@@ -90,8 +91,8 @@
 .founder-dashboard-add-event__btn {
   @include media-breakpoint-down(sm) {
     box-shadow: 0px -2px 15px -1px rgba(0, 0, 0, 0.4);
-    width: 40px;
-    height: 40px;
+    width: 48px;
+    height: 48px;
     padding: 0;
     @include border-radius(50%);
     border: 1px solid white;
